syntax = "proto3";

package Protocol;
option csharp_namespace = "Google.Protobuf.Protocol";

import "Enum.proto";
import "Struct.proto";

message ConnectToC
{
    
}

message ReqHeroListToS
{
    int32 accountId =1;
}

message ResHeroListToC
{
    repeated LobbyHeroInfo lobbyheros = 1;
}

message ReqCreateHeroToS
{
    string nickname = 1;
    EHeroClassType classType = 2;
}

message ResCreateHeroToC
{
    ECreateHeroResult result = 1;
}

message ReqDeleteHeroToS
{
    int32 heroIdx = 1;
}

message ResDeleteHeroToC
{
    bool isSuccess = 1;
	int32 heroIdx = 2;
}

message PreEnterRoomToS
{
    int32 heroIdx = 1;
}
message PreEnterRoomToC
{
    int32 roomId = 1;
}

message ReqEnterRoomToS
{
    int32 heroIdx = 1;
}

message ResEnterRoomToC
{
    MyHeroInfo myHero = 1;
    bool isChangeRoom = 2;
    repeated ItemInfo items = 3;
    repeated SkillInfo skills = 4;
}

message ChangeRoomToS
{
    int32 roomId = 1;
}

message ChangeRoomToC
{
    int32 roomId = 1;
}

message SpawnToC
{
    repeated HeroInfo heroes = 1;
    repeated CreatureInfo creatures= 2;
    repeated ObjectInfo objects = 3;
}

message ReqLeaveGameToS
{

}

message MoveToS
{
    PosInfo posInfo = 1;
}

message MoveToC
{
    int32 objectId = 1;
    PosInfo posInfo = 2;
    EMoveType moveType = 3;
}

message PingCheckToC
{

}

message PingCheckToS
{

}

message DeSpawnToC
{
    repeated int32 objectIds = 1;
}

message ReqUseSkillToS 
{
	SkillInfo skillInfo = 1;
    PosInfo skillPivot = 2;
}

message ResUseSkillToC 
{
	int32 objectId = 1;
	SkillInfo skillInfo = 2;
    PosInfo posInfo = 3;
}

message ModifyStatToC
{
    int32 objectId = 1;
	StatInfo statInfo = 2;
}

message ModifyOneStatToC
{
    int32 objectId = 1;
    float changedValue = 2;
    float gapValue = 3;
    EStatType statType = 4;
    EFontType fontType = 5;
}

message DieToC
{
    int32 objectId = 1;
    int32 killerId = 2;
}

message TeleportToC
{
    int32 objectId = 1;
    PosInfo posInfo = 2;
    ETeleportType telpoType = 3;
}

message RewardToC
{
    int32 exp = 1;
    int32 gold = 2;
}

message PickupDropItemToS
{
    int32 objectId = 1;
    int32 templateId = 2;
}

message PickupDropItemToC
{
    EPickupFailReason result = 1;
}

message AddItemToC
{
    ItemInfo itemInfo = 1;
    EAddItemType addType = 2;
}

message UseItemToS
{
    int64 itemdDbId = 1;
}

message UseItemToC
{
    int64 itemDbId = 1;
}

message EquipItemToS
{
    int64 itemDbId = 1;
}

message UnEquipItemToS
{
    int64 itemDbId = 1;
}

message ChangeSlotTypeToC
{
    int64 itemDbId = 1;
    ESlotType slotType = 2;
}

message CreatePartyToS
{

}

message ApplyEffectToC
{
    int32 objectId = 1;
    int32 templateId = 2;
    int64 effectId = 3;
}

message ReleaseEffectToC
{
    int32 objectId = 1;
    int64 effectId = 2;
}